--- a/wp-content/themes/wpbootstrap/assets/sass/style.scss
+++ b/wp-content/themes/wpbootstrap/assets/sass/style.scss
@@ -105,6 +105,10 @@ h1 {
 		font-size: 20px;
 		visibility: visible;
 
+		.menu-item:nth-child(1){
+			background-color: green !important;
+		}
+
 		.menu-item {
 			@extend %ball;
 
@@ -126,33 +130,10 @@ h1 {
 				top: 0;
 				min-width: 200px;
 				visibility: hidden;
-				@for $i from 1 through $menu-items {
-					&:nth-child(#{$i}) {
-						span{
-							@for $j from 1 through $max-childs {
-								&:nth-child(#{$j}) {
-									transition-property: opacity;
-									transition-duration: 0.1s;
-									transition-timing-function: ease;
-									transition-delay: ($j/30*-1)+1s;
-									opacity: 0;
-								}
-							}
-						}
-					}
-				}
+			}
 
-				// span{
-				// 	@for $i from 1 through $max-childs {
-				// 		&:nth-child(#{$i}) {
-				// 			transition-property: opacity;
-				// 			transition-duration: 0.1s;
-				// 			transition-timing-function: ease;
-				// 			transition-delay: ($i/10*-1)+2s;
-				// 			opacity: 0;
-				// 		}
-				// 	}
-				// }
+			&:nth-child(0){
+				color: red;
 			}
 		}
 
